# aoc2021

./: .gitignore  Cargo.toml  output.txt
script/: get-input-example.sh  solution.ts
src/: main.rs  solution.rs
src/solution/: index.rs  list.rs
