[package]
name = "aoc2021-rust"
version = "0.1.0"
authors = ["Martin Gabel <martin.gabel@becker-antriebe.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "2.33.3"
simple_logger = "1.13.0"
log = "0.4.14"
regex = "1.5.4"
lazy_static = "1.4.0"
